Fixed the z-indexes for home page

--- a/client/src/components/home/date-section.scss
+++ b/client/src/components/home/date-section.scss
@@ -8,6 +8,7 @@
     padding: 0.5rem 0;
     font-size: 0.7rem;
     position: sticky;
+    z-index: 1;
     top: 5rem;
     background-color: $background;
     font-family: $title-font;
