--- a/client/src/components/home/home.scss
+++ b/client/src/components/home/home.scss
@@ -30,7 +30,7 @@
 
     font-family: $title-font;
     background-color: $background;
-    z-index: 1;
+    z-index: 2;
 }
 
 .home-top button {
